feat: implement area schnittstelle
